[gd_scene load_steps=8 format=2]

[ext_resource path="res://images/gui/key_back_hover.png" type="Texture" id=1]
[ext_resource path="res://images/gui/control_back.png" type="Texture" id=2]
[ext_resource path="res://images/gui/key_back.png" type="Texture" id=3]
[ext_resource path="res://menus/Controls.gd" type="Script" id=4]
[ext_resource path="res://images/level_select_background.png" type="Texture" id=5]
[ext_resource path="res://sounds/rollover2.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/click4.wav" type="AudioStream" id=7]

[node name="Controls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 30.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="ReturnToMenuButton" type="Button" parent="VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 59.0
margin_bottom = 25.0
size_flags_horizontal = 0
text = "< Back"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 640.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 143.0
margin_top = 53.0
margin_right = 497.0
margin_bottom = 393.0

[node name="Controls" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 354.0
margin_bottom = 170.0

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls"]
margin_right = 354.0
margin_bottom = 14.0
text = "Controls"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls"]
margin_top = 18.0
margin_right = 354.0
margin_bottom = 170.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer"]
margin_right = 250.0
margin_bottom = 152.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 22.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
text = "Forwards"
valign = 1

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 250.0
margin_bottom = 48.0
texture = ExtResource( 2 )

[node name="Label2" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer/TextureRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
text = "Backwards"
valign = 1

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 250.0
margin_bottom = 74.0
texture = ExtResource( 2 )

[node name="Label3" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer/TextureRect3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
text = "Left"
valign = 1

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 250.0
margin_bottom = 100.0
texture = ExtResource( 2 )

[node name="Label4" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer/TextureRect4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
text = "Right"
valign = 1

[node name="TextureRect5" type="TextureRect" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 250.0
margin_bottom = 126.0
texture = ExtResource( 2 )

[node name="Label5" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer/TextureRect5"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
text = "Shoot"
valign = 1

[node name="TextureRect6" type="TextureRect" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 250.0
margin_bottom = 152.0
texture = ExtResource( 2 )

[node name="Label6" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer/TextureRect6"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
text = "Advance conversation"
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer"]
margin_left = 254.0
margin_right = 354.0
margin_bottom = 152.0

[node name="ForwardKeyButton" type="TextureButton" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2"]
margin_right = 100.0
margin_bottom = 22.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )

[node name="ForwardKey" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/ForwardKeyButton"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="BackwardKeyButton" type="TextureButton" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2"]
margin_top = 26.0
margin_right = 100.0
margin_bottom = 48.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )

[node name="BackwardKey" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/BackwardKeyButton"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="LeftKeyButton" type="TextureButton" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2"]
margin_top = 52.0
margin_right = 100.0
margin_bottom = 74.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )

[node name="LeftKey" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/LeftKeyButton"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="RightKeyButton" type="TextureButton" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2"]
margin_top = 78.0
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )

[node name="RightKey" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/RightKeyButton"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="ShootKeyButton" type="TextureButton" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2"]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 126.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )

[node name="ShootKey" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/ShootKeyButton"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="ConvoKeyButton" type="TextureButton" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2"]
margin_top = 130.0
margin_right = 100.0
margin_bottom = 152.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )

[node name="ConvoKey" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/ConvoKeyButton"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 354.0
margin_bottom = 184.0
custom_constants/margin_top = 10

[node name="GameSettings" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 354.0
margin_bottom = 230.0

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/GameSettings"]
margin_right = 354.0
margin_bottom = 14.0
text = "Game Settings"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/GameSettings"]
margin_top = 18.0
margin_right = 354.0
margin_bottom = 42.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/GameSettings/HBoxContainer"]
margin_right = 250.0
margin_bottom = 24.0

[node name="TextureButton" type="TextureRect" parent="VBoxContainer/CenterContainer/VBoxContainer/GameSettings/HBoxContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 22.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/GameSettings/HBoxContainer/VBoxContainer/TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
text = "Number of rooms per level"
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/GameSettings/HBoxContainer"]
margin_left = 254.0
margin_right = 354.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="LevelRooms" type="SpinBox" parent="VBoxContainer/CenterContainer/VBoxContainer/GameSettings/HBoxContainer/VBoxContainer2"]
margin_right = 100.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 22 )
min_value = 5.0
max_value = 30.0
value = 8.0
rounded = true
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 354.0
margin_bottom = 244.0
custom_constants/margin_top = 10

[node name="SoundSettings" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 248.0
margin_right = 354.0
margin_bottom = 340.0

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings"]
margin_right = 354.0
margin_bottom = 14.0
text = "Audio Settings"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings"]
margin_top = 18.0
margin_right = 354.0
margin_bottom = 92.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings/HBoxContainer"]
margin_right = 100.0
margin_bottom = 74.0

[node name="TextureButton" type="TextureRect" parent="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings/HBoxContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 22.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings/HBoxContainer/VBoxContainer/TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
text = "Music Volume"
valign = 1

[node name="TextureButton2" type="TextureRect" parent="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings/HBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 100.0
margin_bottom = 48.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings/HBoxContainer/VBoxContainer/TextureButton2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
text = "SFX Volume"
valign = 1

[node name="TextureButton3" type="TextureRect" parent="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings/HBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 100.0
margin_bottom = 74.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings/HBoxContainer/VBoxContainer/TextureButton3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
text = "GUI Volume"
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings/HBoxContainer"]
margin_left = 104.0
margin_right = 354.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings/HBoxContainer/VBoxContainer2"]
margin_right = 250.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 0.5
step = 0.001
value = 0.5

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings/HBoxContainer/VBoxContainer2"]
margin_top = 26.0
margin_right = 250.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 0.5
step = 0.001
value = 0.5

[node name="GUISlider3" type="HSlider" parent="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings/HBoxContainer/VBoxContainer2"]
margin_top = 52.0
margin_right = 250.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 0.5
step = 0.001
value = 0.5

[node name="KeyWaitPanel" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="KeyWaitPanel"]
margin_left = 230.0
margin_top = 190.0
margin_right = 410.0
margin_bottom = 290.0
rect_min_size = Vector2( 180, 100 )

[node name="MarginContainer" type="MarginContainer" parent="KeyWaitPanel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Label" type="Label" parent="KeyWaitPanel/Panel/MarginContainer"]
margin_left = 10.0
margin_top = 43.0
margin_right = 170.0
margin_bottom = 57.0
text = "Press new key..."
align = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "GUI"

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="mouse_entered" from="VBoxContainer/MarginContainer/ReturnToMenuButton" to="." method="_on_ReturnToMenuButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/ReturnToMenuButton" to="." method="_on_ReturnToMenuButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/ForwardKeyButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/ForwardKeyButton" to="." method="_on_control_key_button_pressed" binds= [ 0 ]]
[connection signal="mouse_entered" from="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/BackwardKeyButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/BackwardKeyButton" to="." method="_on_control_key_button_pressed" binds= [ 1 ]]
[connection signal="mouse_entered" from="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/LeftKeyButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/LeftKeyButton" to="." method="_on_control_key_button_pressed" binds= [ 2 ]]
[connection signal="mouse_entered" from="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/RightKeyButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/RightKeyButton" to="." method="_on_control_key_button_pressed" binds= [ 3 ]]
[connection signal="mouse_entered" from="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/ShootKeyButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/ShootKeyButton" to="." method="_on_control_key_button_pressed" binds= [ 4 ]]
[connection signal="mouse_entered" from="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/ConvoKeyButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VBoxContainer/Controls/HBoxContainer/VBoxContainer2/ConvoKeyButton" to="." method="_on_control_key_button_pressed" binds= [ 5 ]]
[connection signal="mouse_entered" from="VBoxContainer/CenterContainer/VBoxContainer/GameSettings/HBoxContainer/VBoxContainer2/LevelRooms" to="." method="_on_button_mouse_entered"]
[connection signal="value_changed" from="VBoxContainer/CenterContainer/VBoxContainer/GameSettings/HBoxContainer/VBoxContainer2/LevelRooms" to="." method="_on_LevelRooms_value_changed"]
[connection signal="value_changed" from="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings/HBoxContainer/VBoxContainer2/MusicSlider" to="." method="_on_Music_Slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings/HBoxContainer/VBoxContainer2/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/CenterContainer/VBoxContainer/SoundSettings/HBoxContainer/VBoxContainer2/GUISlider3" to="." method="_on_GUISlider3_value_changed"]
[connection signal="finished" from="ButtonClick" to="." method="_on_ButtonClick_finished"]
